...
    }
    
    /** Presents a view controller that indicates there aren't enough spots. */
    func handleNotEnoughSpots() {
        let username = requestingUser?.valueForKey("Name") as? String
        let confirmingRequest = UIAlertController(title: "Accepting Error", message: "Looks like your adventure doesn't have enough spots in it to accept \(goeUtilities.splitUserName(username!))", preferredStyle: UIAlertControllerStyle.Alert)
        confirmingRequest.addAction(UIAlertAction(title: "Okay", style: UIAlertActionStyle.Destructive, handler: { action in self.navigationController?.popViewControllerAnimated(true)}))
        self.presentViewController(confirmingRequest, animated: true, completion: nil)
    }
    
    /** Handler for when the host presses the No button.*/
    @IBAction func rejectUser(sender: UIButton) {
        sender.enabled = false
...
