...
    
    /** Completes the saving process by displaying the return button. */
    func completeSave(savedRecord: CKRecord?) {
        dispatch_async(dispatch_get_main_queue()) {
            self.indicator!.stopAnimating()
            self.confirmingRequest!.title = "Details Updated"
            self.confirmingRequest!.addAction(UIAlertAction(title: "Return", style: UIAlertActionStyle.Default, handler: { action in self.goeUtilities.segueAndForceReloadProfileViewController() }))
        }
    }
    
    /** Logout function. */
    @IBAction func Logout(sender: UIButton) {
        goeUtilities.logout(self)
...
